add_library(CppTutorials_strings strings.cpp)
add_library(CppTutorials_pointers pointers.cpp)
add_library(CppTutorials_structs structs.cpp)
add_library(CppTutorials_variables variables.cpp)
add_library(CppTutorials_files files.cpp)
add_library(CppTutorials_typecasting typecasting.cpp)
add_library(CppTutorials_classes classes.cpp)
